--- a/index.html
+++ b/index.html
@@ -587,16 +587,16 @@ footer .footer-right a:hover { color: var(--fg); }
     </div>
   </div>
   <div class="partnership-body">
-    <p class="partnership-lead">Your audience doesn't trust you anymore. A decade of algorithmic optimization trained them to skip, block, and scroll past everything you make. You can't buy back that trust. But you can stand next to someone who never lost it.</p>
-    <p class="partnership-graf">The REWIND ecosystem reaches over a million people who actively chose to reject algorithmic content. They don't use ad blockers because they're cheap — they use them because they're exhausted. This is the audience you can't reach through traditional digital marketing, because they've opted out of the system your media buys depend on.</p>
-    <p class="partnership-graf">We're looking for founding partners — brands that want to be credited as backers of a cultural movement, not advertisers within it. Association here means something precisely because we've never sold it before.</p>
+    <p class="partnership-lead">The algorithmic feed model is hitting a wall. Engagement is plateauing, trust is eroding, and the audience that grew up inside the algorithm is actively walking away from it. What replaces it is already emerging — intentional media, voluntary attention, shared experience over personalized prediction.</p>
+    <p class="partnership-graf">We've been actively engaged in the culture of — and building the infrastructure for — that shift. Five live products, a million-plus users, and a revenue model based entirely on voluntary support — zero ads, zero data extraction. The New York Times, Rolling Stone, and Billboard covered it. MTV's co-founder endorsed it. And the audience keeps growing because they found us the old-fashioned way: word of mouth.</p>
+    <p class="partnership-graf">We're looking for founding partners — brands that understand this cultural moment and want to be on the right side of it. Not as advertisers, but as stewards. Credited partners in a movement that's already proving the model works.</p>
     <div class="partnership-model">
-      <div class="partnership-model-label">What partnership looks like</div>
+      <div class="partnership-model-label">What alignment looks like</div>
       <div class="partnership-model-items">
-        <div class="partnership-model-item"><span class="pm-marker">→</span><span class="pm-text">Founding partner placement across the REWIND Network — "This broadcast preserved by [brand]"</span></div>
-        <div class="partnership-model-item"><span class="pm-marker">→</span><span class="pm-text">Named alignment with press-covered cultural infrastructure (NYT, Rolling Stone, Billboard)</span></div>
-        <div class="partnership-model-item"><span class="pm-marker">→</span><span class="pm-text">Access to an audience of 1M+ who self-selected against algorithmic content — unreachable elsewhere</span></div>
-        <div class="partnership-model-item"><span class="pm-marker">→</span><span class="pm-text">Co-credited stewardship of open cultural tools (Trove, AskEngine) used by designers, researchers, and institutions</span></div>
+        <div class="partnership-model-item"><span class="pm-marker">→</span><span class="pm-text">Founding partner credit across the REWIND Network — "This broadcast preserved by [brand]"</span></div>
+        <div class="partnership-model-item"><span class="pm-marker">→</span><span class="pm-text">Association with press-covered cultural infrastructure that audiences already trust</span></div>
+        <div class="partnership-model-item"><span class="pm-marker">→</span><span class="pm-text">Access to 1M+ users who chose intentional media — an audience unreachable through traditional digital channels</span></div>
+        <div class="partnership-model-item"><span class="pm-marker">→</span><span class="pm-text">Co-stewardship of open cultural tools used by designers, researchers, and institutions worldwide</span></div>
       </div>
     </div>
   </div>
