--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <meta property="og:type" content="website">
 <meta property="og:title" content="FLEX — Cultural Infrastructure Studio">
 <meta property="og:description" content="Five live products. One philosophy. Cultivation over extraction. Cultural preservation, AI search, and digital discovery — built without algorithms, ads, or engagement traps.">
-<meta property="og:image" content="/og-card.png">
+<meta property="og:image" content="https://rewindme.studio/og-card.png">
 <meta property="og:image:width" content="1200">
 <meta property="og:image:height" content="630">
 
@@ -24,7 +24,7 @@
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="FLEX — Cultural Infrastructure Studio">
 <meta name="twitter:description" content="Five live products. One philosophy. Cultivation over extraction.">
-<meta name="twitter:image" content="/og-card.png">
+<meta name="twitter:image" content="https://rewindme.studio/og-card.png">
 <meta name="twitter:creator" content="@flexasaurusrex">
 
 <meta name="theme-color" content="#0a0a0a">
